어딘가에 추가된 느낌표

--- a/VS/index.html
+++ b/VS/index.html
@@ -46,6 +46,6 @@
     <h1>심심했어요...</h1>
     <h2>그 소리가 아니고 심슨 드립입니당.ㅋㅋㅋㅋ</h2>
     <p>심슨도 마약을 하는데... 무서운 심슨...</p>
-    <p class="chat1">킹리적 갓심의 심슨</p>
+    <p class="chat1">킹리적 갓심의 심슨!</p>
 
 </html>
